# ZeroSync

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  protostar.toml  relay_contract.sol  roadmap.md  setup.cfg  setup.py  sibd_cli.py  starkRelay_cli.py  testAll.sh  test_wrapper.py  zerosync_cli.py
.github/: CODEOWNERS  config.yml  labels.yml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  02_FEATURE_REQUEST.md  03_CODEBASE_IMPROVEMENT.md
.github/workflows/: CI.yml  labels.yml  lock.yml  stale.yml
benchmark/: README.md  benchmarks.py
benchmark/lib/: benchmark_lib.py
benchmark/scripts/: benchmark_lib.py
cairo/: io.cairo  merkleProof.cairo  protostar.toml  testCairo.sh
cairo/src/: block.cairo  block_header.cairo  buffer.cairo  io.cairo  main.cairo  main.py  merkle.cairo  merkle_proof.cairo  merkle_tree.cairo  transaction.cairo  utils.cairo  utils_for_testing.cairo  validate.cairo
cairo/src/crypto/: readme.md
cairo/src/hash/: readme.md
cairo/src/sha256/: packed_sha256.cairo  sha256.cairo
cairo/src/sha256_legacy/: packed_sha256.cairo  sha256.cairo
cairo/src/signature/: readme.md
cairo/src/utreexo/: bridge_node.py  bridge_node_dummy.sh  test_utreexo.cairo  utreexo.cairo  utreexo.py  utreexo_dummy.sh
cairo/src/utxo_set/: test_utxo_set.cairo
cairo/tests/: dummy_data.cairo  test_block.cairo  test_block_header.cairo  test_buffer.cairo  test_io.cairo  test_merkle.cairo  test_merkle_tree.cairo  test_sha256.cairo  test_transaction.cairo  test_utils.cairo  test_validate.cairo  utils.cairo  utils_for_testing.cairo
conf/: starkRelay.toml
data/: block_0.json  block_1.json  block_100000.json  block_170000.json  block_300000.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  import_example.cairo  roadmap.md  todos
hints/: Cargo.toml  README.md
hints/src/: lib.rs
parser/: Cargo.toml  README.md
parser/src/: lib.rs  main.rs  memory.rs
scripts/: utxo_dummy_generator.py
src/: python_utils.cairo
src/ZeroSync/block/: block.cairo  block_header.cairo  test_merkle_tree.cairo
src/ZeroSync/chain_proof/: main.cairo
src/ZeroSync/crypto/: hash160.cairo  hash256.cairo  secp256k1_schnorr.cairo  sha256_packed.cairo
src/ZeroSync/stark_verifier/: composer.cairo  evaluator.cairo  readme.md
src/ZeroSync/transaction/: test_transaction.cairo
src/ZeroSync/utils/: endianness.cairo  python_utils.cairo  utxo_dummy_generator.py
src/ZeroSync/utxo_set/: test_utxo_set.cairo
src/block/: block.cairo  block_header.cairo  compute_median.cairo  merkle_tree.cairo  test_bits_and_target.cairo  test_bits_to_target.cairo  test_block.cairo  test_block_header.cairo  test_block_reward.cairo  test_compute_median.cairo  test_generation.py  test_merkle_tree.cairo  test_target.cairo  test_target_bits_with_recursion.cairo  tests_bits_to_target_io.json
src/block/utxo_dummies/: block_170000.json  block_222224.json  block_328734.json  block_383838.json  utils.cairo
src/chain_proof/: block_0.json  main.cairo  main.py  parameters.json  recurse.cairo  state_0.json
src/crypto/: hash160.cairo  hash256.cairo  hash_utils.cairo  readme.md  ripemd160.cairo  secp256k1_ecdsa.cairo  sha1.cairo  sha256.cairo  test_hash160.cairo  test_hash256.cairo  test_ripemd160.cairo  test_secp256k1_ecdsa.cairo  test_sha1.cairo  test_sha256.cairo
src/crypto/hash160/: hash160.cairo  test_hash160.cairo
src/crypto/ripemd160/: ripemd160.cairo  ripemd160_python.cairo  rmd160.cairo  test_ripemd160.cairo  utils.cairo
src/crypto/secp256k1/: ecdsa.cairo  test_ecdsa.cairo
src/crypto/sha1/: sha1.cairo  test_sha1.cairo
src/crypto/sha256/: sha256.cairo  test_sha256.cairo
src/crypto/sha256d/: sha256d.cairo  test_sha256d.cairo
src/headers_chain_proof/: bridge_node.py  main.cairo  main.py  merkle_mountain_range.cairo  pedersen_merkle_tree.cairo  recurse.cairo  state_0.json
src/recursive/: channel.cairo  composer.cairo  evaluator.cairo  stark_verify.cairo
src/recursive/air/: air_instance.cairo  pub_inputs.cairo  stark_proof.cairo
src/recursive/crypto/: random.cairo
src/recursive/fri/: fri_verifier.cairo
src/serialize/: serialize.cairo  test_serialize.cairo
src/stark_verifier/: channel.cairo  composer.cairo  composer.cairo.ejs  evaluator.cairo  parameters.cairo  readme.md  stark_verifier.cairo  stark_verify.cairo  test_stark_verifier.cairo  utils.cairo  utils.py
src/stark_verifier/air/: air_instance.cairo  pub_inputs.cairo  stark_proof.cairo  table.cairo  trace_info.cairo
src/stark_verifier/crypto/: random.cairo  test_random.cairo
src/stark_verifier/fri/: fri_verifier.cairo  polynomials.cairo  utils.cairo
src/stark_verifier/parameters/: default_parameters.json  parameters.cairo  parameters.py
src/stark_verifier/parser/: Cargo.toml  readme.md
src/stark_verifier/parser/src/: main.rs  memory.rs
src/transaction/: test_transaction.cairo  transaction.cairo
src/utils/: authproxy.py  benchmark_block.py  btc_api.py  compute_median.cairo  compute_median_test.cairo  endianness.cairo  hex_utils.py  pow2.cairo  python_utils.cairo  serialize.cairo  test_compute_median.cairo  utxo_dummy_generator.py
src/utreexo/: bridge_node.py  bridge_node_test_utils.py  test_utreexo.cairo  utreexo.cairo
src/utxo_set/: test_utxo_set.cairo  utreexo.cairo  utxo_set.cairo
tests/: test_parser.py  test_stark_verifier.cairo  test_stark_verifier.rs  utils.py
tests/cairo_programs/: fibonacci.cairo
tests/cairo_programs_compiled/: fibonacci.json
tests/integration/: test_stark_verifier.cairo  utils.py
tests/integration/cairo_programs/: fibonacci.cairo
tests/rust_tests/: Cargo.toml  pyproject.toml
tests/rust_tests/src/: lib.rs
tests/unit/: test_merkle_pedersen.cairo  test_serialize.cairo  test_transaction.cairo  test_utreexo.cairo  test_utxo_set.cairo
tests/unit/block/: test_bits_and_target.cairo  test_bits_and_target.json  test_block.cairo  test_block_header.cairo  test_compute_median.cairo  test_merkle_tree.cairo
tests/unit/crypto/: test_hash160.cairo  (+6 more)
wrapper/: __init__.py  btcrpc.py  cairo.py  preprocessing.py  setup.py  utxo_data_bridge.py
(+43 files in other folders)
