[package]
name = "zerosync_hints"
version = "0.1.0"
edition = "2021"

[lib]
name = "zerosync_hints"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.17.3"

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.86"
hex = "0.4.3"
winterfell = { package = "winter-verifier", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
winter_air = { package = "winter-air", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
winter_math = { package = "winter-math", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
winter_utils = { package = "winter-utils", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
winter_crypto = { package = "winter-crypto", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
giza_air = { package = "giza-air", git = "https://github.com/zerosync/giza", rev = "721df3e", version = "0.1", default-features = false  }
giza_core = { package = "giza-core", git = "https://github.com/zerosync/giza", rev = "721df3e", version = "0.1", default-features = false }
blake2 = { package = "blake2-rfc", version = "0.2"}
starknet_crypto = { package = "starknet-crypto", git = "https://github.com/xJonathanLEI/starknet-rs" }
starknet_ff = { package = "starknet-ff", git = "https://github.com/xJonathanLEI/starknet-rs" }
zerosync_parser = { path = "../parser" }

[workspace]
