[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air = { package = "giza-air", git = "https://github.com/zerosync/giza" ,  version = "0.1", default-features = false  }
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.86"
winterfell = { package = "winter-verifier", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter-math = { package = "winter-math", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter-utils = { package = "winter-utils", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter-crypto = { package = "winter-crypto", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter-air = { package = "winter-air", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
giza_core = { package = "giza-core", git = "https://github.com/zerosync/giza", version = "0.1", default-features = false }
