[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.86"

winterfell = { package = "winter-verifier", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter_math = { package = "winter-math", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter_utils = { package = "winter-utils", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter_crypto = { package = "winter-crypto", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter_air = { package = "winter-air", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }
winter_fri = { package = "winter-fri", git = "https://github.com/zerosync/winterfell", rev = "27847af", version = "0.4", default-features = false }

giza_air = { package = "giza-air", git = "https://github.com/zerosync/giza" ,  version = "0.1", default-features = false  }
giza_core = { package = "giza-core", git = "https://github.com/zerosync/giza", version = "0.1", default-features = false }